# RSS-Newspaper-Generator

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  flake.nix  package-lock.json  package.json  tailwind.config.js
migrations/: 20240428082728_init.sql  20240428122019_feed-titles.sql
src/: app.rs  article.rs  breadcrumbs.rs  date.rs  db.rs  feeds.rs  layout.rs  lib.rs  main.rs  navigation.rs  routes.rs
style/: tailwind.css
templates/: entry.html  feeds.html  root.html
